Probably not the correct place for this

--- a/config.yml.dist
+++ b/config.yml.dist
@@ -29,6 +29,7 @@ repeater:
             - dmr
 asterisk:
     - controller-1:
+        enabled: true
         address: 127.0.0.1
         user: someuser
         password: somepass
