--- a/config.yml.dist
+++ b/config.yml.dist
@@ -1,7 +1,7 @@
 ---
 listen_port: 8888
 repeater:
-    - VE3LSR-1:
+    VE3LSR-1:
         callsign: VE3LSR
         Sonsor: Lake Simcoe Repeater Assoc
         Website: https://www.ve3lsr.ca
@@ -18,7 +18,7 @@ repeater:
             - procomm
             - canwarn
 
-    - VE3LSR-2:
+    VE3LSR-2:
         callsign: VE3LSR
         rxFreq: 444.000
         txFreq: 439.000
